
add_library(common STATIC
  Shell.hpp
  Shell.cpp
  Directory.hpp
  Directory.cpp
  CpuActivity.hpp
  CpuActivity.cpp
  CpuFrequency.hpp
  CpuFrequency.cpp
  CpuSensors.hpp
  CpuSensors.cpp
  CpuTemperature.hpp
  CpuTemperature.cpp
  PowerCap.hpp
  PowerCap.cpp
  Strings.hpp
  Strings.cpp
  Strong.hpp)

